--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,7 @@
 # See https://docs.github.com/get-started/getting-started-with-git/ignoring-files for more about ignoring files.
 
 # Compiled output
-/dist/*
-!/dist/heroku/
+/dist
 /tmp
 /out-tsc
 /bazel-out
