--- a/package.json
+++ b/package.json
@@ -6,8 +6,9 @@
     "start": "node server.js",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
-    "test": "ng test",
-    "heroku-postbuild": "ng build --configuration=production"
+    "heroku-postbuild": "ng build --configuration=production",
+    "test": "ng test"
+
   },
   "private": true,
   "dependencies": {
